--- a/project/styles.css
+++ b/project/styles.css
@@ -12,14 +12,13 @@
   }
   .container{
     width: 100%;
-    margin-top: 100px;
+    margin-top: 50px;
     justify-content: center; 
     display: flex;
     
 
   }
   .board{
-    
     display: grid;
     width: 450px;
     height: 450px;
@@ -29,7 +28,17 @@
   }
   .board1 {
     border: 2px solid rgb(0, 0, 0);
+    display: grid;
+    justify-content: center;
+    width: 150px;
+    height: 150px;
+    grid-template-columns: repeat(3, auto)
     
+  }
+  .checkboard{
+    margin-bottom: 50px;
+    margin-left: 50px;
+    border: 2px solid rgb(0, 0, 0);
     display: grid;
     justify-content: center;
     width: 150px;
@@ -45,9 +54,101 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    
+    
+  }
+.checkcell{
+  width: var(--cell-size);
+    height: var(--cell-size);
+    border: 1px solid rgb(161, 153, 153);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
     cursor: pointer;
+}
+  .winning-message {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .9);
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 5rem;
+    flex-direction: column;
   }
+  
+  .winning-message button {
+    font-size: 3rem;
+    background-color: white;
+    border: 1px solid black;
+    padding: .25em .5em;
+    cursor: pointer;
+  }
+  
+  .winning-message button:hover {
+    background-color: black;
+    color: white;
+    border-color: white;
+  }
+  
+  .winning-message.show {
+    display: flex;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   .cell:first-child,
 .cell:nth-child(2),
 .cell:nth-child(3) {
@@ -89,16 +190,18 @@
   border-bottom: none;
 }
 
-  .cell.x,
-  .cell.o {
-    cursor: not-allowed;
-  }
-  
-  .cell.x::before,
-  .cell.x::after,
-  .cell.o::before {
-    background-color: black;
-  }
+.cell.x,
+.cell.o {
+  cursor: not-allowed;
+}
+
+.cell.x::before,
+.cell.x::after{
+  background-color: rgb(236, 4, 4);
+}
+.cell.o::before {
+  background-color: rgb(0, 255, 0);
+}
   
   .board.x .cell:not(.x):not(.o):hover::before,
   .board.x .cell:not(.x):not(.o):hover::after,
@@ -148,35 +251,3 @@
     background-color: white;
   }
   
-  .winning-message {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, .9);
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 5rem;
-    flex-direction: column;
-  }
-  
-  .winning-message button {
-    font-size: 3rem;
-    background-color: white;
-    border: 1px solid black;
-    padding: .25em .5em;
-    cursor: pointer;
-  }
-  
-  .winning-message button:hover {
-    background-color: black;
-    color: white;
-    border-color: white;
-  }
-  
-  .winning-message.show {
-    display: flex;
-  }
